--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mt-4">
         <!-- Header section of the page -->
         <header class="text-center mb-4">
-            <h1>Mihon Extension Scans</h1>  <!-- Main heading -->
+            <h1>keiyoushi Extension Scans</h1>  <!-- Main heading -->
             <div id="summary-container" class="my-3"></div>  <!-- Container for displaying summary information -->
             <p>APKs from <a href="https://github.com/keiyoushi/extensions"><b>https://github.com/keiyoushi/extensions</b></a></p>
         </header>
