--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                     <tr>
                         <!-- Table headers with data-sort attributes for sorting and span for sort symbols -->
                         <th data-sort="filename">File Name <span class="sort-symbol"></span></th>
-                        <th>Version</th>
                         <th data-sort="hash">Hash <span class="sort-symbol"></span></th>
                         <th data-sort="scan_date">Scan Date <span class="sort-symbol"></span></th>
                         <th data-sort="positives">Positives <span class="sort-symbol"></span></th>
-                        <th data-sort="total">Total <span class="sort-symbol"></span></th>                        <th data-sort="file_size">File Size (KB) <span class="sort-symbol"></span></th>
+                        <th data-sort="total">Total <span class="sort-symbol"></span></th>
+                        <th data-sort="file_type">Type <span class="sort-symbol"></span></th>
+                        <th data-sort="file_size">File Size (KB) <span class="sort-symbol"></span></th>
                         <th>Details</th>
                     </tr>
                 </thead>
